# MIAOS

./: .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.arm64  Makefile  README.ja.md  README.md  THIRD_PARTY_NOTICES.md  api.requirement.md  celery_tasks.py  command.bash  command.md  config.py  dataset.py  docker-compose.yaml  main.py  memo.md  mia_attack.py  mia_cifar100.py  mia_lira.py  mia_shokri.py  minio_utils.py  pipeline.py  release-please-config.json  system_architecture.md  target_model.py  test_celery.py  utils.py
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
.github/scripts/: deploy-common.sh  deploy-orchestrator.sh  deploy-worker.sh
.github/workflows/: cd-build.yml  cd-deploy.yml  cd-retag.yml  cd.yml  ci.yml  release-please.yml  release.yml
backend/: Cargo.toml  Dockerfile  design.md
backend/docs/: SPECIFICATION.md
backend/libs/rusty-celery/src/broker/: redis.rs
backend/migrations/: 20260509115013_init_schema.down.sql  20260509115013_init_schema.up.sql
backend/src/: error.rs  infrastructure.rs  lib.rs  main.rs  routes.rs  state.rs  test.rs  test_utils.rs
backend/src/config/: default.rs
backend/src/dto/: experiment.rs  task.rs
backend/src/entities/: experiment.rs  task.rs
backend/src/handlers/: experiment.rs  file.rs
backend/src/repositories/: experiment.rs  mod.rs  storage.rs  task.rs
backend/src/routes/: experiment.rs
backend/src/services/: experiment.rs  file.rs
docs/: architecture.md  command.bash  memo.md  system_architecture.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/docs/: ARCHITECTURE.md  COMPONENTS.md
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts  schema.d.ts
frontend/src/components/: ConfirmModal.tsx  CreateExperimentModal.tsx  ExperimentList.tsx  TaskList.tsx
frontend/src/hooks/: useDynamicColumns.ts  useExperiments.ts  useTasks.ts
orchestrator/: .env.ci  .env.exsample  .gitignore  Makefile  compose.base.yaml  compose.ci.yaml  compose.deploy.init.yaml  compose.deploy.local.yaml  compose.deploy.manual.yaml  compose.deploy.yaml  compose.dev.yaml  compose.prod.yaml  compose.yaml  docker-compose.yaml  memo.md
orchestrator/.devcontainer/backend/: devcontainer.json
orchestrator/.devcontainer/frontend/: devcontainer.json
orchestrator/backend/: .gitignore  Cargo.toml  Dockerfile  Makefile  tmp.txt
orchestrator/backend/docs/: SPECIFICATION.md
orchestrator/backend/libs/rusty-celery/celery-codegen/src/: task.rs
orchestrator/backend/libs/rusty-celery/src/broker/: redis.rs
orchestrator/backend/libs/rusty-celery/src/protocol/: mod.rs
orchestrator/backend/libs/rusty-celery/src/task/: mod.rs
orchestrator/backend/migrations/: 20260621120000_add_watermark_column.down.sql  20260621120000_add_watermark_column.up.sql
orchestrator/backend/src/: error.rs  infrastructure.rs  lib.rs  main.rs  routes.rs  state.rs  test_utils.rs
orchestrator/backend/src/config/: app.rs  default.rs  mod.rs
orchestrator/backend/src/dto/: experiment.rs  filter.rs  health.rs  mod.rs  task.rs  watermark.rs
orchestrator/backend/src/entities/: experiment.rs  task.rs
orchestrator/backend/src/handlers/: experiment.rs  file.rs  filter.rs  health.rs  mod.rs
orchestrator/backend/src/repositories/: experiment.rs  mod.rs  storage.rs  task.rs
orchestrator/backend/src/services/: experiment.rs  file.rs  filter.rs  health.rs  mod.rs
orchestrator/frontend/: Dockerfile  Makefile  eslint.config.js  nginx.conf  package.json  vite.config.ts
orchestrator/frontend/docs/: ARCHITECTURE.md  COMPONENTS.md
orchestrator/frontend/src/: App.tsx
schema/: openapi.json
scripts/: run_local.py
src/attacks/: mia_attack.py  mia_lira.py  mia_shokri.py
src/core/: config.py  pipeline.py
src/data/: dataset.py
src/server_client/: __init__.py
src/server_client/models/: __init__.py  create_experiment_request.py  create_experiment_request_hyperparameters.py  experiment_status.py  mia_method.py  model.py  model_files_type_0.py  model_hyperparameters.py  model_other_metrics_type_0.py  task.py  task_args_control.py  task_args_keyword.py  task_args_positional.py  (+3 more)
src/utils/: minio_utils.py
src/workers/: celery_tasks.py
test/: test_celery.py
tests/: test_celery.py
worker/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  compose.base.yaml  compose.deploy.manual.yaml  compose.deploy.yaml  compose.dev.yaml  compose.prod.yaml  docker-entrypoint.sh  pyproject.toml
worker/.devcontainer/: devcontainer.json
worker/docs/: SPECIFICATION.md  command.bash  memo.md
worker/scripts/: run_local.py
worker/src/attacks/: mia_attack.py  mia_lira.py  mia_shokri.py  watermark_probe.py
worker/src/core/: config.py  pipeline.py
worker/src/data/: dataset.py
worker/src/data/watermark/: __init__.py  config.py  mask.py  transform.py
worker/src/models/: attack_model.py  target_model.py
worker/src/server_client/api/experiments/: get_all_experiments.py
worker/src/server_client/api/files/: get_file.py
worker/src/server_client/api/filters/: delete_filter.py  list_filters.py  upload_filter.py
worker/src/server_client/models/: __init__.py  claim_experiment_request.py  create_experiment_request.py  create_experiment_request_watermark.py  filter_list_response.py  filter_summary.py  model.py  model_files_type_0.py  model_watermark.py  task.py  update_results_request.py  watermark_config.py  watermark_config_apply.py
worker/src/utils/: minio_utils.py
worker/src/workers/: celery_tasks.py
(+52 files in other folders)
