[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web App
axum = "0.8.9"
# データシリアライズ
serde = "1.0.228"
serde_json = "1.0.149"
# 非同期処理
tokio = { version = "1.52.2", features = ["full"] }
async-trait = "0.1.89"
# 構造化ログ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# DB
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "time"] }
time = { version = "0.3.44", features = ["serde-human-readable", "macros", "formatting", "parsing"] }
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-time", "with-json"] }
# redis
redis = { version = "1.2.1", features = ["tokio-comp"] }
base64 = "0.22.1"
deadpool-redis = "0.23.0"
celery = "0.5.5"
# error
thiserror = "2.0.18"

[dev-dependencies]
# for the test
mockall = "0.14.0"
tower = "0.5.2"
