[project]
name = "miaos-worker"
version = "0.1.0"
# nvcr.io/nvidia/pytorch:26.03-py3はUbuntu24.04に合わせて 3.12がインストールされているため
requires-python = ">=3.12"

dependencies = [
  "numpy",
  "scikit-learn",
  "matplotlib",
  "tqdm",
  "pandas",
  "celery",
  "redis",
  "minio",
  "boto3",
  "requests",
  "python-dotenv"
]

# --extraで指定
[project.optional-dependencies]
dev = [
  "jupyterlab",
  "ruff",
  "openapi-python-client"
]

[tool.uv]
# ライブラリ(配布用)では無い: パッケージングして環境に埋め込む処理がスキップされる .whlの生成をしない
package = false

[tool.ruff]
# ruffで無視するファイル
exclude = ["src/server_client"]